deploy/envoy/kitex-grpc.yaml
static_resources:
  listeners:
    - name: mtls_grpc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                alpn_protocols: [h2]
                tls_certificates:
                  - certificate_chain: {filename: /etc/finconfig/tls/tls.crt}
                    private_key: {filename: /etc/finconfig/tls/tls.key}
                validation_context:
                  trusted_ca: {filename: /etc/finconfig/tls/ca.crt}
                  match_typed_subject_alt_names:
                    - san_type: DNS
                      matcher: {exact: finconfig-internal-client}
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: finconfig_grpc
                codec_type: HTTP2
                forward_client_cert_details: SANITIZE_SET
                set_current_client_cert_details:
                  dns: true
                route_config:
                  name: kitex_backend
                  virtual_hosts:
                    - name: kitex_backend
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route:
                            cluster: kitex_backend
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: kitex_backend
      connect_timeout: 1s
      type: STATIC
      load_assignment:
        cluster_name: kitex_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe: {path: /var/run/finconfig/backend.sock}
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}

admin:
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
